--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,11 @@
 ---
+
 import '../styles/global.css';
+import Header from '../componets/Header.astro';
+import Footer from '../componets/Footer.astro';
 const pageTitle = "Sobre mi";
+
+
 
 const identity = {
   firstName: "Sarah",
@@ -16,6 +21,7 @@ const goal = 3;
 const skillColor = "navy";
 const fontWeight = "bold"
 const textCase = "uppercase"
+
 ---
 
 <html lang="en">
@@ -37,12 +43,12 @@ const textCase = "uppercase"
               text-transform: var(--textCase);
             }
           </style>
+          
 	</head>
 	<body>
 		<body>
-            <a href="/">Inicio</a>
-            <a href="/about/">Sobre mi</a>
-            <a href="/blog/">Blog</a>
+
+    <Header />
 
 
 <h1>Sobre mi</h1>
@@ -71,5 +77,9 @@ const textCase = "uppercase"
 {finished && <p>¡He terminado este tutorial!</p>}
 
 {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+<Footer />
+<script>
+  import "../scripts/menu.js";
+</script>
 	</body>
 </html>
