--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css';
+import Header from '../componets/Header.astro';
+import Footer from '../componets/Footer.astro';
+const pageTitle = "Mi blog de Astro aprendizaje"
 ---
 
 <html lang="en">
@@ -11,16 +14,18 @@ import '../styles/global.css';
 		<title>Astro</title>
 	</head>
 	<body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
+        <Header />
       
-        <h1>Mi blog de Astro aprendizaje</h1>
+        <h1>{pageTitle}</h1>
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
 		<ul>
 			<li><a href="/posts/post-1/">Publicación 1</a></li>
 			<li><a href="/posts/post-2/">Publicación 2</a></li>
 			<li><a href="/posts/post-3/">Publicación 3</a></li>
 		  </ul>
+		  <Footer />
+		  <script>
+			import "../scripts/menu.js";
+		  </script>
       </body>
 </html>
