--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,6 @@ import Footer from '../componets/Footer.astro';
 const pageTitle = "Sobre mi";
 
 
-
 const identity = {
   firstName: "Sarah",
   country: "Canada",
@@ -16,7 +15,7 @@ const identity = {
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 const skillColor = "navy";
 const fontWeight = "bold"
