--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,12 @@
-/* estilos de la barra de navegación*/
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 .hamburger {
   padding-right: 20px;
   cursor: pointer;
