--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const { pageTitle } = Astro.props;
+import Greeting from '../componets/Greeting';
+const pageTitle = "Página de inicio";
 ---
-<BaseLayout pageTitle ={pageTitle}>
-  <h2>Mi impresionante subtítulo del blog</h2>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>El impresionante subtítulo de mi blog</h2>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
 </BaseLayout>
