--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ const pageTitle = "Página de inicio";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h2>El impresionante subtítulo de mi blog</h2>
-  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+  <Greeting client:load messages={["Hej", "Hello", "Hola", "Habari"]} />
 </BaseLayout>
